force-app/main/default/objects/ccrz__E_Term__c/ccrz__E_Term__c.object-meta.xml
<CustomObject>
    <description>Holds each terms and condition</description>
    <label>CC Term</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>CC Term Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>