force-app/main/default/objects/ccrz__E_Term__c/fields/ccrz__Title__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Title__c</fullName>
    <description>Title of the term &amp; condition</description>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>