force-app/main/default/objects/ccrz__E_Term__c/listViews/ccrz__All.listView-meta.xml
<ListView>
    <fullName>ccrz__All</fullName>
    <columns>ccrz__Title__c</columns>
    <columns>ccrz__Description__c</columns>
    <columns>ccrz__Locale__c</columns>
    <columns>ccrz__Type__c</columns>
    <columns>ccrz__Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>